--- a/projeto.tex
+++ b/projeto.tex
@@ -46,8 +46,7 @@ São Paulo\\
 \textbf{RESUMO}
 \end{center}
 \renewcommand{\baselinestretch}{0.6666666}
-Manchas solares são as formas mais visíveis do campo magnético solar, são estruturas magnéticas que aparecem de forma mais escura na fotosfera do sol “superfície solar”. A mancha solar é caracterizada por um núcleo mais escuro conhecido como umbra e uma parte exterior mais clara conhecida como penumbra. A presença de uma penumbra distingue as manchas solares dos poros geralmente menores. As manchas solares têm sido estudadas por
-mais de 400 anos e a sua natureza magnética é conhecida desde 1908 e partir daí temos evoluído a sua compreensão e apoiando essa evolução temos diversos trabalhos feitos de diversas maneiras alguns com processos bem manuais, com a chegada e a evolução da computação, em especial a inteligência artificial e a visão computacional podemos trabalhar de forma automatizada com um grande número de imagens a fim de segmentar as manchas solares em umbra e penumbra.
+Manchas solares são as formas mais visíveis do campo magnético solar, são estruturas magnéticas que aparecem de forma mais escura na fotosfera do sol “superfície solar”. A mancha solar é caracterizada por um núcleo mais escuro conhecido como umbra e uma parte exterior mais clara conhecida como penumbra. A presença de uma penumbra distingue as manchas solares dos poros geralmente menores. As manchas solares têm sido estudadas por mais de 400 anos e a sua natureza magnética é conhecida desde 1908 e partir daí temos evoluído a sua compreensão e apoiando essa evolução temos diversos trabalhos feitos de diversas maneiras alguns com processos totalmente manuais, com a chegada e a evolução da computação em especial a inteligência artificial e a visão computacional podemos trabalhar de forma automatizada com um grande número de imagens a fim de segmentar as manchas solares em umbra e penumbra. Neste trabalho é apresentado uma forma de segmentação de imagens utililzando arquiteturas de redes neurais convolucionais com objetivo de separar cada mancha solar em duas partes umbra e penumbra de forma automatizada, para cada uma das partes segmentadas calculos serão realizados a fim de medir o tamanho de cada região e comparar com os resultados de ciclos solares anteriores retirado das bases de dados do observatório SOHO, com este comparativo vai ser possível medir a eficiência da metodologia proposta, criar ajustes e propor melhorias para trabalhos futuros.
 
 O resumo deve apresentar, em no máximo 250 palavras, o tema da pesquisa, os objetivos, o recorte teórico-metodológico e os resultados almejados. A proposta do projeto de pesquisa é estabelecer uma primeira delimitação do trabalho que será realizado ao longo do Mestrado. Neste sentido, a apresentação do projeto de pesquisa é realizada por meio de um texto que possui a estrutura de divisões deste documento, a formatação de um mínimo de dezessete (17) a vinte (20) laudas de conteúdo em papel A4 branco com espaçamento entre linhas de 1,5.
 \\[0.5cm]
